# sd-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  test.py
doc/: api.md  cli.md
src/sd_cli/: __init__.py  http.py
src/sd_cli/plugins/: base.py  canny.py  cfg.py  debug.py  depth.py  device.py  image.py  instantid.py  ipa.py  ipa_faceid.py  ipa_faceid_plus.py  ipa_plus.py  lightning.py  lora.py  output.py  photo_maker.py  pose.py  prompt.py  res_adapter.py  scheduler.py  sdxl.py  seed.py  size.py  steps.py  tcd.py  utils.py
src/sd_cli/plugins/ip_adapter/: ip_adapter_faceid.py
src/sd_tools/: auraflow.py  flux.py  misc.py  sd.py  sd3.py  sdxl.py
src/sd_tools/plugins/: auraflow.py  base.py  debug.py  depth.py  device.py  dpo.py  http.py  hyper.py  image.py  inpainting.py  ip_composition.py  ip_composition_xl.py  ipa.py  ipa_faceid.py  ipa_faceid_plus.py  ipa_faceid_portrait.py  ipa_plus.py  lcm.py  lora.py  model.py  model3.py  modelXL.py  model_flux.py  negative_prompt.py  offline.py  output.py  photo_maker.py  pipe.py  pipeline_stable_diffusion_xl_instantid.py  pose.py  prompt.py  res_adapter.py  run.py  safetensor.py  scheduler.py  seed.py  size.py  steps.py  utils.py  wrong.py  (+1 more)
src/sd_tools/plugins/http/: __init__.py  http.py
src/sd_tools/plugins/http/assets/: index.css  index.html  index.js
src/sd_tools/plugins/ip_adapter/: ip_adapter.py  ip_adapter_faceid.py  ip_adapter_faceid_separate.py
src/sd_tools/plugins/layerdiffusion/: __init__.py
src/sd_tools/plugins/pix2pix/: __init__.py  model.py  pix2pix_turbo.py
