[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sd_cli"
version = "1.0.0"
authors = [{ name = "Feng Zhou", email = "zf.pascal@gmail.com" }]
description = "command line tool for stable diffusion"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "diffusers>=2.7.0",
    "transformers>=4.38.2",
]

[project.optional-dependencies]
photomaker = ["photomaker@git+https://github.com/TencentARC/PhotoMaker.git"]
controllnet = ["controlnet_aux>=0.0.7"]
faceid = ["ip_adapter@git+https://github.com/tencent-ailab/IP-Adapter"]

[project.urls]
Home = "https://github.com/zweifisch/sd-cli"

[project.scripts]
sd = "sd_cli:main"
