[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sd_cli"
version = "1.0.0"
authors = [{ name = "Feng Zhou", email = "zf.pascal@gmail.com" }]
description = "command line tool for stable diffusion"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "diffusers@https://github.com/huggingface/diffusers/archive/main.zip",
    "transformers>=4.38.2",
    "prompt-toolkit>=3.0.43",
    "controlnet_aux>=0.0.7",
    "accelerate>=0.25.0",
    "peft>=0.9.0",
]

[project.optional-dependencies]
photomaker = [
    "photomaker@https://github.com/TencentARC/PhotoMaker/archive/main.zip",
]
faceid = ["insightface>=0.7.3", "onnxruntime>=1.16.3"]

[project.urls]
Home = "https://github.com/zweifisch/sd-cli"

[project.scripts]
sdxl = "sd_cli.sdxl:main"
