[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sd_tools"
version = "1.5.0"
authors = [{ name = "Feng Zhou", email = "zf.pascal@gmail.com" }]
description = "command line tool for stable diffusion"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "diffusers>=0.27.0",
    "transformers>=4.38.2",
    "prompt-toolkit>=3.0.43",
    "controlnet_aux>=0.0.7",
    "accelerate>=0.25.0",
    "peft>=0.9.0",
]

[project.optional-dependencies]
photomaker = ["photomakerv>=0.1.0"]
faceid = ["insightface>=0.7.3", "onnxruntime>=1.16.3"]

[project.urls]
Home = "https://github.com/zweifisch/sd-cli"

[project.scripts]
sdxl = "sd_tools.sdxl:main"
sd = "sd_tools.sd:main"
sd3 = "sd_tools.sd3:main"
sd-pt2st = "sd_tools.misc:pt2st"
sd-inspect = "sd_tools.misc:st_inspect"
sd-2fp16 = "sd_tools.misc:to_fp16"
sd-path = "sd_tools.misc:hf_path"
